test/tests/success/for.sm
// true
// true
// true
/*
1
2
3
true
4
true
5
false
6
*/
/*
1
1
2
3
1
2
3
0
5
10
0
5
10
0
0
-5
-10
0
-5
-10
0
10
5
0
0
5
10
1
2
3
5
8
1
2
3
1
2
3
4
5
6
7
5
10
10
10
1
2
3
4
6
0
0
*/

program {
    var i: int = 0;
    var n: int = 3;
    var s: string = "";
    
    for (i = 1)
        output i; // 1
    
    for (i = 1,1 + 4 - 3,n)
        output i; // 1\n2\n3

    i = 0;
    for (i = i + 1 while i != 3) {
        output i;
    } // 1\n2\n3

    for (i = 0 step 5 until 10) {
        output i;
    } // 0\n5\n10

    for (i = 0 step 5 until 13) {
        output i;
    } // 0\n5\n10

    for (i = 0 step 5 until 0) {
        output i;
    } // 0

    for (i = 0 step 5 until -1) {
        output i;
    }

    for (i = 0 step -5 until -10) {
        output i;
    } // 0\n-5\n10

    for (i = 0 step -5 until -13) {
        output i;
    } // 0\n-5\n10

    for (i = 0 step -5 until 0) {
        output i;
    } // 0

    for (i = 0 step -5 until 1) {
        output i;
    }

    for (i = 10 step -5 until 0) {
        output i;
    } // 10\n5\n0

    i = 0;
    for (i = i step 5 until 10) {
        output i;
    } // 0\n5\n10

    i = 1;
    for (i = 1 step i until 10) {
        output i;
    } // 1\n2\n3\n5\n8

    i = 1;
    for (i = 1 step 1 until (i + 1) % 4) {
        output i;
    } // 1\n2\n3

    for (i = 1, 2 step 1 until 4, i + 1 while i < 7) {
        output i;
    } // 1\n2\n3\n4\n5\n6 \n7

    i = 0;
    for (i = i + 1 while i < 3) {
        i = 5;
        output i;
    } // 5

    i = 0;
    for (i = i + 1 while i < 3) {
        var i: int = 10;
        output i;
    } // 10\n10\n10

    for (s = read, read, read while read == "true", read) {
        output s;
    } // 1\n2\n3\n4\n6

    i = 0;
    for (i = 4 while false) {}
    output i; // 0

    for (i = 4 step 1 until 0) {}
    output i; // 0
}