test/tests/errors/error-while.sm
// true
// false
// false
/**/
/**/

program {
    var x: int = 1;
    while (x) {
        x = 4;
    }
}